# platform.core.base.rpm-installer

./: CMakeLists.txt  rpm-installer.manifest  rpm_installer_deactvation_list.txt.in
backend-lib/: CMakeLists.txt
backend-lib/inc/: librpminternals.h
backend-lib/src/: librpm.c  librpminternals.c
backend/inc/: coretpk-installer.h  rpm-installer.h
backend/scripts/: coretpk_category_converter.sh.in  coretpk_ro_xml_converter.sh.in  coretpk_rw_xml_converter.sh.in  cpio_rpm_package.sh.in  cpio_rpm_package_update_xml.sh.in  install_rpm_package.sh.in  install_rpm_package_with_dbpath_ro.sh.in  install_rpm_package_with_dbpath_rw.sh.in  query_rpm_package.sh.in  rpm_update_xml.sh.in  uninstall_rpm_package.sh.in  upgrade_rpm_package.sh.in  upgrade_rpm_package_with_dbpath_ro.sh.in  upgrade_rpm_package_with_dbpath_rw.sh.in
backend/src/core/: rpm-installer-core.c  rpm-installer-tool.c
backend/src/coretpk/: coretpk-installer.c
backend/src/coretpk/inc/: coretpk-installer-internal.h  coretpk-installer-type.h
backend/src/coretpk/xml-parser/: coretpk-parser-hybrid.c
backend/src/rpm/: rpm-installer-core.c  rpm-installer-privilege.c  rpm-installer-signature.c  rpm-installer-tool.c  rpm-installer.c
backend/src/rpm/inc/: rpm-installer-privilege.h  rpm-installer-signature.h  rpm-installer-type.h
backend/src/vconf/: rpm-vconf-intf.c
common/: CMakeLists.txt  rpm-installer-util.c
debian/: changelog  control  control.slp  desktop.slp  rpm-installer-dbg.postinst  rpm-installer.install.in  rpm-installer.postinst  rules
frontend/: CMakeLists.txt  coretpk-installer-config.ini  rpm-installer-config.ini
frontend/inc/: rpm-frontend.h
frontend/src/: rpm-appcore-intf.c  rpm-cmdline.c
frontend/ui/include/: rpm-homeview.h
frontend/ui/src/: rpm-homeview.c
inc/: rpm-installer-util.h
packaging/: rpm-installer.changes  rpm-installer.spec
po/: CMakeLists.txt  POTFILES.in  en_GB.po  ja_JP.po  ko_KR.po  update-po.sh  zh_CN.po
